# ==============================================================================
# Simulation Models
# ==============================================================================

# ------------------------------------------------------------------------------
# Active Domains
# ------------------------------------------------------------------------------

add_subdirectory(gpu_compute)
add_subdirectory(analog)
add_subdirectory(electronics)
add_subdirectory(environment)
add_subdirectory(dynamics)
add_subdirectory(aerodynamics)
add_subdirectory(propulsion)
add_subdirectory(sensors)
